ARGUS-48936: Upgraded dependencies, switched to JUnit 5 and changed compile target to Java 17.